containers/manifests/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: hasher-webserver-service
  namespace: default

spec:
  type: ClusterIP
  ports:
  - name: hasher-webserver
    port: 4567
    targetPort: 4567
  selector:
    app: hasher-webserver
