containers/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hasher-webserver-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Optional: Use this if your service does not use HTTPS
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  rules:
  - host: hasher.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hasher-webserver-service
            port:
              number: 4567
